all write ups finished

--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,7 @@
 }
   .project-detail .programs{
     margin-top: 1rem;
+    margin-bottom: 2rem;
   }
   .project-detail .process-wrapper .process-img{
     /* margin-right: 1rem;
