--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -99,27 +99,35 @@ nav a:hover { color: #56667a; }
 
 #images .item-wrapper { display: flex; justify-content: space-around; flex-wrap: wrap; }
 
-#images .grid-item img { width: 100%; height: auto; object-fit: cover; position: relative; }
+#images .grid-item { max-width: 1000px; max-height: auto; object-fit: cover; }
 
-#images .grid-item img:hover { opacity: 0.2; }
+/* #images .grid-item img:hover { opacity: 0.2; }
 
 #images .grid-item:hover .overlay-one { opacity: 1; }
 
 #images .grid-item:hover .overlay-two { opacity: 1; }
 
-#images .grid-item:hover .overlay-three { opacity: 1; }
+#images .grid-item:hover .overlay-three { opacity: 1; } */
 
 /* hover for text on overlay to affect image transparency */
 #images .grid-item:hover img { opacity: 0.2; }
 
 /* overlay */
-#images .overlay-one { position: absolute; top: 290rem; left: 50rem; opacity: 0; }
+.overlay-one {position: absolute; opacity: 0; top: 0; bottom: 0; right: 0; left: 0; transition: 0.2s ease-out;}
 
-#images .overlay-one:hover { opacity: 1; }
+.overlay-one:hover { opacity: 1; transition: 0.3s ease;}
 
-#images .overlay-title { margin-bottom: 0rem; padding-bottom: 0rem; }
+.overlay-title{
+  position: absolute;
+  bottom: 30px;
+  left: 23px;
+}
 
-#images .overlay-description { margin-top: 0rem; padding-top: 0rem; }
+.overlay-description{
+  position: absolute;
+  bottom: 6px;
+  left: 23px;
+}
 
 /* image section ends here */
 /* button section */
