--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ flex-wrap: wrap;
 /* overlay */
 .overlay-title{
   position: absolute;
-  bottom: 30px;
+  bottom: 50px;
   left: 23px;
 }
 .overlay-description{
@@ -258,15 +258,9 @@ flex-wrap: wrap;
   #graphic-title{
     padding-bottom: 0rem;
   }
-  .overlay-one{
+  /* .overlay-one{
     display: none;
-  }
-  .overlay-two{
-    display: none;
-  }
-  .overlay-three{
-    display: none;
-  }
+  } */
   .project-detail .finished-project img{
     max-width: 30rem;
   }
