--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -16,7 +16,8 @@
 body{
   font-family: MonsterratRegular;
   /* background-color: #000000; */
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+  background-color: #f7f7f7;
 }
 
 h1{
