--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -319,18 +319,18 @@ nav a:hover{
 
 /* buttons */
 .button-confirm{
-  border: 2px solid #56667a;
+  border: 2px solid #6179d4;
   padding: 0.75em;
   padding-left: 6.5em;
   padding-right: 6.5em;
   text-align: center;
   font-weight: bold;
-  color: #56667a;
+  color: #6179d4;
   box-sizing: border-box;
 }
 
 .button-confirm:hover{
-  background-color: #56667a;
+  background-color: #6179d4;
   /* border: 2px solid #6179d4; */
   color: #ffffff;
 }
