--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -15,15 +15,7 @@
 
 body{
   font-family: MonsterratRegular;
-  /* background-color: #000000; */
-  /* background-color: #f5f5f5; */
   background-color: #f7f7f7;
-}
-
-h1{
-  font-family: AvenirNextBold;
-  font-size: 5rem;
-  color: #70788a;
 }
 
 #banner h1{
@@ -32,18 +24,22 @@ h1{
   text-align: center;
 }
 
+h1{
+  font-family: AvenirNextBold;
+  font-size: 5rem;
+  color: #70788a;
+}
+
 h2{
   font-family: AvenirNextBold;
   font-size: 3rem;
-  /* color: #b2b6bf; */
   color: #70788a;
 }
 
 h3{
   font-family: AvenirNextRegular;
   font-size: 1.5rem;
-  /* color: #b2b6bf; */
-    color: #70788a;
+  color: #70788a;
 }
 
 h4{
@@ -52,7 +48,6 @@ h4{
 
 p{
   font-family: MonsterratRegular;
-  /* color: #b2b6bf; */
   color: #6e727a;
   font-size: 1rem;
   line-height: 1.5rem;
@@ -78,11 +73,6 @@ li{
   margin-bottom: 1rem;
 }
 
-.category-row{
-  box-sizing: border-box;
-  padding: 10rem 10rem 3rem 10rem;
-}
-
 nav{
   display: flex;
   justify-content: flex-start;
@@ -98,6 +88,11 @@ nav a{
 
 nav a:hover{
   color: #56667a;
+}
+
+.category-row{
+  box-sizing: border-box;
+  padding: 10rem 10rem 3rem 10rem;
 }
 
 #footer a{
@@ -270,34 +265,13 @@ nav a:hover{
 }
 
 /* overlay */
-/* .overlay-one{
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  transition: 0.2s ease-out;
-} */
-
 .overlay-one:hover{
   opacity: 1;
   transition: 0.3s ease;
 }
 
-/* .overlay-title{
-  position: absolute;
-  bottom: 50px;
-  left: 23px;
-}
-
-.overlay-description{
-  position: absolute;
-  bottom: 6px;
-  left: 23px;
-} */
-
 /* image section ends here */
+
 /* button section */
 #buttons h2{
   padding-bottom: 10rem;
@@ -353,6 +327,7 @@ nav a:hover{
   color: #ffffff;
 }
 
+/* footer */
 #footer{
   display: flex;
   flex-direction: column;
